--- a/shakshuka/assets/box_model.css
+++ b/shakshuka/assets/box_model.css
@@ -1,5 +1,3 @@
-/* Introduction to Cascading Style Sheets */
-
 body {
   /* If the user cannot load the Arial font, the sans-serif font is used */
   font-family: Arial, sans-serif;
@@ -70,5 +68,60 @@ ol li:nth-of-type(2n) {
 
 h2 + .user_review {
     border-top: 1px solid black;
+}
+
+nav {
+  display: inline-block;
+}
+
+nav ul li {
+  display: inline-block;
+}
+
+nav ul li a {
+  display: block;
+  padding: 20px;
+}
+
+
+
+body {
+  width: 900px;
+  margin: 0 auto;
+}
+
+
+aside {
+  display: inline-block;
+  margin-right: 15px;
+  width: 180px;
+}
+
+section {
+  display: inline-block;
+  width: 700px;
+  vertical-align: top;
+}
+
+.ingredients-list li {
+  margin: 15px 0px;
+}
+
+input[type="text"], select {
+  display: block;
+  width: 175px;
+}
+
+select {
+  margin: 10px 0;
+  width: 180px;
+}
+
+textarea {
+  width: 350px;
+}
+
+label {
+  display: block;
 }
 
